Add workerdDebugPort binding for dynamic worker access
This binding allows a worker to dynamically connect to another workerd
instance's debug port and access worker entrypoints via RPC, without
requiring static configuration.

The binding provides two methods:
- getEntrypoint(service, entrypoint?, props?): Access stateless entrypoints
- getActor(service, entrypoint, actorId): Access Durable Object instances

This is a workerd-only API intended for local development and testing.

Written in conjunction with Claude, Sonnet was unable to write this in a
way that I liked but opus was actually very very close!

--- a/src/workerd/server/BUILD.bazel
+++ b/src/workerd/server/BUILD.bazel
@@ -134,6 +134,20 @@ wd_cc_library(
 )
 
 wd_cc_library(
+    name = "workerd-debug-port-client",
+    srcs = [
+        "workerd-debug-port-client.c++",
+    ],
+    hdrs = [
+        "workerd-debug-port-client.h",
+    ],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/workerd/io",
+    ],
+)
+
+wd_cc_library(
     name = "workerd-api",
     srcs = [
         "workerd-api.c++",
@@ -156,6 +170,7 @@ wd_cc_library(
         ":actor-id-impl",
         ":fallback-service",
         ":pyodide",
+        ":workerd-debug-port-client",
         ":workerd_capnp",
         "//src/cloudflare",
         "//src/node",
