Wire up channel tokens to make Fetchers serializable.
(And also DurableObjectClass stubs.)

For now, serialization for RPC is guarded by the common `experimental` compat flag, and serialization for storage is guarded by the extra flag `allow_irrevocable_stub_storage`.

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -324,6 +324,12 @@ wd_test(
 )
 
 wd_test(
+    src = "stub-storage-test.wd-test",
+    args = ["--experimental"],
+    data = ["stub-storage-test.js"],
+)
+
+wd_test(
     src = "unsafe-test.wd-test",
     args = ["--experimental"],
     data = ["unsafe-test.js"],
