--- a/deps/rust/crates/BUILD.cc-1.2.49.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.49.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "derive_more",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,25 +29,38 @@ rust_library(
         ],
     ),
     crate_features = [
-        "add",
-        "add_assign",
-        "default",
-        "std",
+        "parallel",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
-    proc_macro_deps = [
-        "@crates_vendor__derive_more-impl-2.0.1//:derive_more_impl",
-    ],
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=derive_more",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.1",
+    version = "1.2.49",
+    deps = [
+        "@crates_vendor__find-msvc-tools-0.1.5//:find_msvc_tools",
+        "@crates_vendor__jobserver-0.1.34//:jobserver",
+        "@crates_vendor__shlex-1.3.0//:shlex",
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.178//:libc",  # aarch64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.178//:libc",  # aarch64-unknown-linux-gnu
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.178//:libc",  # x86_64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.178//:libc",  # x86_64-unknown-linux-gnu
+        ],
+        "//conditions:default": [],
+    }),
 )
