--- a/deps/rust/crates/BUILD.derive_more-impl-2.1.0.bazel
+++ b/deps/rust/crates/BUILD.derive_more-impl-2.1.0.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "uuid",
+rust_proc_macro(
+    name = "derive_more_impl",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,26 @@ rust_library(
         ],
     ),
     crate_features = [
+        "add",
+        "add_assign",
         "default",
-        "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=uuid",
+        "crate-name=derive_more-impl",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.18.1",
+    version = "2.1.0",
+    deps = [
+        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
+        "@crates_vendor__quote-1.0.42//:quote",
+        "@crates_vendor__syn-2.0.111//:syn",
+    ],
 )
