--- a/deps/rust/crates/BUILD.rustc_version-0.4.1.bazel
+++ b/deps/rust/crates/BUILD.rustc_version-0.4.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "log",
+    name = "rustc_version",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,16 +29,19 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=log",
+        "crate-name=rustc_version",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.4.28",
+    version = "0.4.1",
+    deps = [
+        "@crates_vendor__semver-1.0.27//:semver",
+    ],
 )
