Add patch_env to Python workers sdk
A context manager, to be used like:

```
with patch_env(key1=value1, key2=value2):
    # env is patched
# env is restored
```

--- a/src/pyodide/tsconfig.json
+++ b/src/pyodide/tsconfig.json
@@ -10,7 +10,8 @@
       "pyodide-internal:generated/emscriptenSetup": [
         "./internal/pool/emscriptenSetup.ts"
       ],
-      "internal:*": ["./types/*"]
+      "internal:*": ["./types/*"],
+      "cloudflare-internal:*": ["./types/cloudflare-internal/*"]
     },
     "typeRoots": ["./types"],
     "noEmit": false,
