Adding rules_rust as a http_archive in MODULE.bazel does not work

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,7 +2,7 @@
 
 module(name = "workerd")
 
-bazel_dep(name = "rules_rust", version = "0.68.1")
+#bazel_dep(name = "rules_rust", version = "0.68.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
 bazel_dep(name = "aspect_rules_lint", version = "1.10.2")
 bazel_dep(name = "bazel_features", version = "1.38.0")
