--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -84,3 +84,4 @@ include("//build/deps:deps.MODULE.bazel")
 include("//build/deps:nodejs.MODULE.bazel")
 include("//build/deps:python.MODULE.bazel")
 include("//build/deps:v8.MODULE.bazel")
+include("//build/deps:oci.MODULE.bazel")
