[NFC] Update doxygen build and configuration files
I know that doxygen isn't everyone's favorite thing, but I've
found it useful, but it hasn't been updated in a bit. This
PR updates it and adds a just ds (doxygen-serve) command to
easily serve the generated docs for local browsing.

The doxygen build is added because doxygen needs to be
built with the correct clang version to avoid warnings and
errors.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -131,3 +131,9 @@ label_flag(
     build_setting_default = ":.clang-tidy",
     visibility = ["//visibility:public"],
 )
+
+# Doxygen configuration file
+exports_files(
+    ["doxyfile"],
+    visibility = ["//build/doxygen:__pkg__"],
+)
