Address some load ordering issue in MODULE.bazel

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,13 +2,6 @@
 
 module(name = "workerd")
 
-# compatibility proxy is needed when using current rules_cc with Bazel 8
-compat = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
-use_repo(compat, "cc_compatibility_proxy")
-
-cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
-use_repo(cc_configure, "local_config_cc")
-
 bazel_dep(name = "zlib", version = "1.3.1.bcr.7")
 git_override(
     module_name = "zlib",
@@ -42,7 +35,6 @@ archive_override(
 include("//build/deps:deps.MODULE.bazel")
 include("//build/deps:nodejs.MODULE.bazel")
 include("//build/deps:python.MODULE.bazel")
-include("//build/deps:rust.MODULE.bazel")
 include("//build/deps:v8.MODULE.bazel")
 include("//build/deps:oci.MODULE.bazel")
 
@@ -50,3 +42,13 @@ include("//build/deps:oci.MODULE.bazel")
 include("//build/deps:gen/deps/deps.MODULE.bazel")
 include("//build/deps:gen/build_deps/build_deps.MODULE.bazel")
 include("//build/deps:gen/shared_deps/shared_deps.MODULE.bazel")
+
+# Must be loaded after automated dependencies, which provide rules_rust
+include("//build/deps:rust.MODULE.bazel")
+
+# compatibility proxy is needed when using current rules_cc with Bazel 8
+compat = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
+use_repo(compat, "cc_compatibility_proxy")
+
+cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
+use_repo(cc_configure, "local_config_cc")
