Fix Body::text() and Body::json() to handle BOMs (#5621)

--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -70,6 +70,7 @@ wpt_test(
 wpt_test(
     name = "fetch/api",
     size = "large",
+    compat_flags = ["strip_bom_in_read_all_text"],
     config = "fetch/api-test.ts",
     start_server = True,
     target_compatible_with = select({
