Covert writable-sink to use state-machine.h

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -74,6 +74,7 @@ wd_cc_library(
         "//src/workerd/util:completion-membrane",
         "//src/workerd/util:entropy",
         "//src/workerd/util:perfetto",
+        "//src/workerd/util:state-machine",
         "//src/workerd/util:string-buffer",
         "//src/workerd/util:strings",
         "//src/workerd/util:uuid",
