--- a/deps/rust/crates/BUILD.bumpalo-3.19.1.bazel
+++ b/deps/rust/crates/BUILD.bumpalo-3.19.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "tracing",
+    name = "bumpalo",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,29 +29,23 @@ rust_library(
         ],
     ),
     crate_features = [
-        "attributes",
+        "allocator-api2",
         "default",
-        "std",
-        "tracing-attributes",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
-    proc_macro_deps = [
-        "@crates_vendor__tracing-attributes-0.1.31//:tracing_attributes",
-    ],
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=tracing",
+        "crate-name=bumpalo",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.43",
+    version = "3.19.1",
     deps = [
-        "@crates_vendor__pin-project-lite-0.2.16//:pin_project_lite",
-        "@crates_vendor__tracing-core-0.1.35//:tracing_core",
+        "@crates_vendor__allocator-api2-0.2.21//:allocator_api2",
     ],
 )
