--- a/deps/rust/crates/BUILD.ryu-1.0.21.bazel
+++ b/deps/rust/crates/BUILD.ryu-1.0.21.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "tracing_core",
+    name = "ryu",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,24 +28,17 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "once_cell",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=tracing-core",
+        "crate-name=ryu",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.35",
-    deps = [
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-    ],
+    version = "1.0.21",
 )
