--- a/deps/rust/crates/BUILD.tracing-core-0.1.36.bazel
+++ b/deps/rust/crates/BUILD.tracing-core-0.1.36.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "ryu",
+    name = "tracing_core",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,10 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "once_cell",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2018",
     rustc_flags = [
@@ -35,10 +39,13 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=ryu",
+        "crate-name=tracing-core",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.20",
+    version = "0.1.36",
+    deps = [
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+    ],
 )
