[build] Transition Rust+cargo to bzlmod

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -37,9 +37,6 @@ git_override(
     remote = "https://chromium.googlesource.com/chromium/src/third_party/zlib.git",
 )
 
-# Rust
-bazel_dep(name = "rules_rust", version = "0.68.1")
-
 # BoringSSL may subtly break backwards compatibility and behave differently than the latest FIPS
 # version, often by rejecting key values that it considers invalid/unsafe even though they are still
 # accepted by BoringSSL. Update with caution and only after confirming this is compatible with the
@@ -60,6 +57,7 @@ archive_override(
 include("//build/deps:deps.MODULE.bazel")
 include("//build/deps:nodejs.MODULE.bazel")
 include("//build/deps:python.MODULE.bazel")
+include("//build/deps:rust.MODULE.bazel")
 include("//build/deps:v8.MODULE.bazel")
 include("//build/deps:oci.MODULE.bazel")
 
