fix promises export for readline & inspector

--- a/src/node/BUILD.bazel
+++ b/src/node/BUILD.bazel
@@ -14,10 +14,12 @@ wd_ts_bundle(
         "assert/*.ts",
         "dns/*.ts",
         "fs/*.ts",
-        "stream/*.js",
+        "inspector/*.ts",
         "path/*.ts",
-        "util/*.ts",
+        "readline/*.ts",
+        "stream/*.js",
         "timers/*.ts",
+        "util/*.ts",
     ]),
     schema_id = "0xbcc8f57c63814005",
     tsconfig_json = "tsconfig.json",
