Enable nodejs style global timers with a compat flag.
Using the compat flag "enable_nodejs_global_timers" (now experimental),
users can replace the global timer functions with NodeJS style timers.

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -366,6 +366,12 @@ wd_test(
 )
 
 wd_test(
+    src = "timers-global-override-test.wd-test",
+    args = ["--experimental"],
+    data = ["timers-global-override-test.js"],
+)
+
+wd_test(
     src = "async_hooks-nodejs-test.wd-test",
     args = ["--experimental"],
     data = ["async_hooks-nodejs-test.js"],
