--- a/src/rust/jsg-macros/BUILD.bazel
+++ b/src/rust/jsg-macros/BUILD.bazel
@@ -4,6 +4,7 @@ wd_rust_proc_macro(
     name = "jsg-macros",
     visibility = ["//visibility:public"],
     deps = [
+        "@crates_vendor//:proc-macro2",
         "@crates_vendor//:quote",
         "@crates_vendor//:syn",
     ],
