Add @all-autogates test variant to wd_test
This adds support for running wd_test tests with all autogates enabled,
similar to the existing support in the internal repo.

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -341,6 +341,22 @@ wd_test(
     data = ["unsafe-test.js"],
 )
 
+# Test that verifies autogates are ENABLED - only runs in @all-autogates variant
+wd_test(
+    src = "autogate-enabled-test.wd-test",
+    args = ["--experimental"],
+    data = ["autogate-enabled-test.js"],
+    generate_default_variant = False,
+)
+
+# Test that verifies autogates are DISABLED - only runs in default variant
+wd_test(
+    src = "autogate-disabled-test.wd-test",
+    args = ["--experimental"],
+    data = ["autogate-disabled-test.js"],
+    generate_all_autogates_variant = False,
+)
+
 wd_test(
     src = "url-test.wd-test",
     args = ["--experimental"],
