Add --compat-date flag and @all-compat-flags variant to wd_test
Add a --compat-date CLI flag to `workerd test` that overrides the
compatibility date for all workers. When this flag is used, workers
must NOT specify compatibilityDate in the config - this allows the
test harness to control the compat date externally.

The wd_test macro now generates three variants:
- name@ (default): oldest compat date (2000-01-01)
- name@all-compat-flags: newest compat date (2999-12-31)
- name@all-autogates: all autogates + oldest compat date

Tests can selectively disable variants using generate_default_variant,
generate_all_compat_flags_variant, and generate_all_autogates_variant
flags.

Also adds test cases to verify the compat-flag variants work correctly
by checking Cloudflare.compatibilityFlags.formdata_parser_supports_files
is enabled/disabled based on the compat date.

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -357,6 +357,24 @@ wd_test(
     generate_all_autogates_variant = False,
 )
 
+# Test that verifies compat flags are ENABLED - only runs in @all-compat-flags variant
+wd_test(
+    src = "compat-flag-enabled-test.wd-test",
+    args = ["--experimental"],
+    data = ["compat-flag-enabled-test.js"],
+    generate_all_autogates_variant = False,
+    generate_default_variant = False,
+)
+
+# Test that verifies compat flags are DISABLED - only runs in default variant
+wd_test(
+    src = "compat-flag-disabled-test.wd-test",
+    args = ["--experimental"],
+    data = ["compat-flag-disabled-test.js"],
+    generate_all_autogates_variant = False,
+    generate_all_compat_flags_variant = False,
+)
+
 wd_test(
     src = "url-test.wd-test",
     args = ["--experimental"],
