[o11y][nfc] Emit jsRpc call attributes in standard test worker, use it for sql-test

--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -124,6 +124,7 @@ wd_test(
     src = "sql-test.wd-test",
     args = ["--experimental"],
     data = [
+        "instrumentation-tail-worker.js",
         "sql-test.js",
         "sql-test-tail.js",
     ],
