--- a/deps/rust/crates/BUILD.derive_more-impl-2.1.1.bazel
+++ b/deps/rust/crates/BUILD.derive_more-impl-2.1.1.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "capnp_futures",
+rust_proc_macro(
+    name = "derive_more_impl",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,11 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "add",
+        "add_assign",
+        "default",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -35,15 +40,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=capnp-futures",
+        "crate-name=derive_more-impl",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.23.0",
+    version = "2.1.1",
     deps = [
-        "@crates_vendor__capnp-0.23.1//:capnp",
-        "@crates_vendor__futures-channel-0.3.31//:futures_channel",
-        "@crates_vendor__futures-util-0.3.31//:futures_util",
+        "@crates_vendor__proc-macro2-1.0.104//:proc_macro2",
+        "@crates_vendor__quote-1.0.42//:quote",
+        "@crates_vendor__syn-2.0.111//:syn",
     ],
 )
