--- a/deps/rust/crates/BUILD.ryu-1.0.22.bazel
+++ b/deps/rust/crates/BUILD.ryu-1.0.22.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "capnp",
+    name = "ryu",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,11 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -40,10 +35,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=capnp",
+        "crate-name=ryu",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.23.1",
+    version = "1.0.22",
 )
