--- a/deps/rust/crates/BUILD.dtoa-1.0.11.bazel
+++ b/deps/rust/crates/BUILD.dtoa-1.0.11.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "derive_more_impl",
+rust_library(
+    name = "dtoa",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,11 +28,6 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "add",
-        "add_assign",
-        "default",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -40,15 +35,10 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=derive_more-impl",
+        "crate-name=dtoa",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.1.0",
-    deps = [
-        "@crates_vendor__proc-macro2-1.0.103//:proc_macro2",
-        "@crates_vendor__quote-1.0.42//:quote",
-        "@crates_vendor__syn-2.0.111//:syn",
-    ],
+    version = "1.0.11",
 )
