--- a/deps/rust/crates/BUILD.zmij-1.0.0.bazel
+++ b/deps/rust/crates/BUILD.zmij-1.0.0.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "swc_config_macro",
+rust_library(
+    name = "zmij",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,16 +35,10 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=swc_config_macro",
+        "crate-name=zmij",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.1",
-    deps = [
-        "@crates_vendor__proc-macro2-1.0.104//:proc_macro2",
-        "@crates_vendor__quote-1.0.42//:quote",
-        "@crates_vendor__swc_macros_common-1.0.1//:swc_macros_common",
-        "@crates_vendor__syn-2.0.111//:syn",
-    ],
+    version = "1.0.0",
 )
