make changes due to simdutf

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -434,7 +434,6 @@ wd_cc_library(
     srcs = ["encoding.c++"],
     hdrs = ["encoding.h"],
     implementation_deps = [
-        "//src/workerd/io:features",
         "//src/workerd/util:strings",
         "@simdutf",
     ],
@@ -442,6 +441,7 @@ wd_cc_library(
     deps = [
         ":util",
         "//src/workerd/io:compatibility-date_capnp",
+        "//src/workerd/io:features",
         "//src/workerd/jsg",
         "@capnp-cpp//src/kj",
         "@simdutf",
@@ -592,6 +592,7 @@ kj_test(
     src = "encoding-test.c++",
     deps = [
         ":encoding",
+        "//src/workerd/io",
     ],
 )
 
