Improve CI build performance, especially on macOS
- Enable LLD linker for macOS (35x faster linking)
- Apply ci-limit-storage to all CI configs (smaller debug info, Some jobs were running out of disk space because they lacked this.)
- Exclude type generation from //... builds (saves ~65s)
- Increase CI parallelism from 8 to 32 jobs

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
           [
             { name: linux, arch: X64, image: ubuntu-22.04 },
             { name: linux-arm, arch: ARM64, image: ubuntu-22.04-arm },
-            { name: macOS, arch: ARM64, image: macos-15 },
+            { name: macOS, arch: ARM64, image: macos-15, use_lld: true },
             { name: windows, arch: X64, image: windows-2025 },
           ]
         config: [
@@ -76,6 +76,7 @@ jobs:
       arch_name: ${{ matrix.os.arch }}
       suffix: ${{ matrix.config.suffix }}
       extra_bazel_args: '--config=ci-test --config=ci-${{matrix.os.name}}${{matrix.config.suffix}}'
+      macos_use_lld: ${{ matrix.os.use_lld || false }}
     secrets:
       BAZEL_CACHE_KEY: ${{ secrets.BAZEL_CACHE_KEY }}
       WORKERS_MIRROR_URL: ${{ secrets.WORKERS_MIRROR_URL }}
