Use KJ_TRY and KJ_CATCH in some examples
Claude did all of this.

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -418,6 +418,7 @@ wd_cc_library(
     srcs = ["util.c++"],
     hdrs = ["util.h"],
     implementation_deps = [
+        "//src/workerd/util:exception",
         "//src/workerd/util:mimetype",
         "//src/workerd/util:strings",
         "@simdutf",
