[build] Overhaul CI configuration
- Use remote_download_minimal to speed up release CI
- Don't disable caching for wpt tests, just need to tell Bazel to fetch the
  outputs.
- Disable building benchmarks when this was already supposed to happen, this is
  achieved by fixing ci-limit-storage so that test_tag_filters is adjusted too.
- Remove ci-limit-storage from ci-linux/ci-linux-arm, it is a no-op there
- Adjust build_tag_filters on ci-linux/ci-linux-arm so that benchmark and
  container tests are built as part of bazel build instead of later in bazel
  test.
- Use ci-linux-common in lint CI to run with default set of build filters, that
  way we don't have to build container targets
- Fix clang-tidy warning now that lint CI applies to benchmark targets

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -139,7 +139,7 @@
       "label": "Bazel run all tests (dbg)",
       "type": "shell",
       "command": "bazel",
-      "args": ["test", "-c", "dbg", "--cache_test_results=no", "//..."],
+      "args": ["test", "-c", "dbg", "--nocache_test_results", "//..."],
       "group": {
         "kind": "test",
         "isDefault": true
@@ -158,7 +158,7 @@
       "label": "Bazel run all tests (fastbuild)",
       "type": "shell",
       "command": "bazel",
-      "args": ["test", "-c", "fastbuild", "--cache_test_results=no", "//..."],
+      "args": ["test", "-c", "fastbuild", "--nocache_test_results", "//..."],
       "group": {
         "kind": "test",
         "isDefault": true
@@ -177,7 +177,7 @@
       "label": "Bazel run all tests (opt)",
       "type": "shell",
       "command": "bazel",
-      "args": ["test", "-c", "opt", "--cache_test_results=no", "//..."],
+      "args": ["test", "-c", "opt", "--nocache_test_results", "//..."],
       "group": {
         "kind": "test",
         "isDefault": true
