--- a/.github/actions/setup-runner/action.yml
+++ b/.github/actions/setup-runner/action.yml
@@ -35,6 +35,9 @@ runs:
       shell: pwsh
       if: runner.os == 'Windows'
       # Set a custom output root directory to avoid long file name issues.
+      # TODO(cleanup): According to https://github.com/actions/runner-images/blob/win25/20251216.149/images/windows/scripts/build/Configure-DeveloperMode.ps1#L13,
+      # this should already be set on the build image, but prior testing indicated CI speedups with
+      # it, check if it is actually having any effect.
       run: |
         # Enable Developer Mode to allow Bazel to create real symlinks
         reg add "HKLM\SOFTWARE\Microsoft\Windows\CurrentVersion\AppModelUnlock" /t REG_DWORD /f /v "AllowDevelopmentWithoutDevLicense" /d "1"
