--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -143,3 +143,16 @@ wpt_test(
     }),
     wpt_directory = "@wpt//:websockets@module",
 )
+
+wpt_test(
+    name = "eventsource",
+    config = "eventsource-test.ts",
+    start_server = True,
+    target_compatible_with = select({
+        # TODO(later): Provide a Windows version of the sidecar script we wrote to invoke wptserve.
+        # Currently we only have a Unix shell script.
+        "@platforms//os:windows": ["@platforms//:incompatible"],
+        "//conditions:default": [],
+    }),
+    wpt_directory = "@wpt//:eventsource@module",
+)
